--- a/View/Main/home.html
+++ b/View/Main/home.html
@@ -127,7 +127,7 @@
 
           let leftNavList = '<ul class="layui-nav layui-nav-tree"  lay-filter="test">';
           result.result.map(item=>{
-            leftNavList += '<li class="layui-nav-item">' +
+            leftNavList += '<li class="layui-nav-item layui-nav-itemed">' +
               '<a class="" href="javascript:">'+item.permission_name+'</a>' +
               '<dl class="layui-nav-child">';
             item.two.map(twoItem=>{
